--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://172.26.192.88:5432/demodb
+spring.datasource.username=postgresusr
+spring.datasource.password=postgrespwd
+
+
+#jwk-set-uri property points to the URI containing the public key so that our Resource Server can verify the tokens' integrity
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8085/realms/SpringBootKeycloak/protocol/openid-connect/certs
+#The issuer-uri property represents an additional security measure to validate the issuer of the tokens (which is the Authorization Server)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
+
+
 
