--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+logging.level.root=INFO
+logging.level.com.aruba=DEBUG
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://172.26.192.88:5432/demodb
@@ -10,5 +13,14 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8085/real
 #The issuer-uri property represents an additional security measure to validate the issuer of the tokens (which is the Authorization Server)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
 
+#keycloak.auth-server-url = http://localhost:8085/realms/SpringBootKeycloak/protocol/openid-connect/auth
+#keycloak.realm = SpringBootKeycloak
+#keycloak.resource = login-app
+
+spring.security.oauth2.client.registration.keycloak.client-id=login-app
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=password
+spring.security.oauth2.client.registration.keycloak.scope=openid
 
 
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
+#spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
