--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8085/real
 #The issuer-uri property represents an additional security measure to validate the issuer of the tokens (which is the Authorization Server)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
 
-spring.security.oauth2.client.registration.keycloak.client-id=login-app
-spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.scope=openid
-
-
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
-#spring.security.oauth2.client.provider.keycloak.user-name-attribute=enricopero
+#spring.security.oauth2.client.registration.keycloak.client-id=login-app
+#spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.keycloak.scope=openid
+#
+#
+#spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
+##spring.security.oauth2.client.provider.keycloak.user-name-attribute=enricopero
