prove cors su docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,4 @@ COPY ./target/demoBollo-0.0.1-SNAPSHOT.jar demoBollo-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "demoBollo-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT java -jar ${ENV_OPTS} demoBollo-0.0.1-SNAPSHOT.jar
