--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.datasource.password=postgrespwd
 
 
 #jwk-set-uri property points to the URI containing the public key so that our Resource Server can verify the tokens' integrity
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://172.30.231.105:8085/realms/SpringBootKeycloak/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8085/realms/SpringBootKeycloak/protocol/openid-connect/certs
 #The issuer-uri property represents an additional security measure to validate the issuer of the tokens (which is the Authorization Server)
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://172.30.231.105:8085/realms/SpringBootKeycloak
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8085/realms/SpringBootKeycloak
 
 #spring.security.oauth2.client.registration.keycloak.client-id=login-app
 #spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
