--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=jdbc:postgresql://172.30.231.105:5432/demodb
 spring.datasource.username=postgresusr
 spring.datasource.password=postgrespwd
 
+spring.mvc.servlet.load-on-startup=1
 
 #jwk-set-uri property points to the URI containing the public key so that our Resource Server can verify the tokens' integrity
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8085/realms/SpringBootKeycloak/protocol/openid-connect/certs
